--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,5 +1,5 @@
 ---
-import avatarPhoto from '../assets/avatar.jpg';
+import avatarPhoto from '../assets/avatar.JPG';
 import React from 'react';
 ---
 <div id="container">
