skills page update

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Contacts from "../components/Contacts.astro";
 ---
 <Layout>
-
+    <Contacts />
 </Layout>
