--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -7,20 +7,31 @@
             <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
             <time class="mb-1 text-sm font-normal leading-none">Feb 2025 - Present</time>
             <h3 class="text-lg font-semibold ">Games Developer Internship</h3>
-            <h3 class="text-[17px] font-normal">Education Network Group</h3>
-            <p class="mb-4 text-base font-light">Get access to over 20+ pages including a dashboard layout, charts, kanban board, calendar, and pre-order E-commerce & Marketing pages.</p>
+            <h3 class="text-[17px] font-normal italic">Education Network Group</h3>
+            <p class="mt-1 mb-4 text-sm font-light">
+                Developing games using Unity and C# <br>
+                Participated in team meetings and discussions to brainstorm ideas and provide feedback on game design and development. <br>
+                Collaborated with other developers through Jira, Confluence, and GitHub
+            </p>
         </li>
         <li class="mb-10 ms-4">
             <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
-            <time class="mb-1 text-sm font-normal leading-none">March 2022</time>
-            <h3 class="text-lg font-semibold ">Marketing UI design in Figma</h3>
-            <p class="text-base font-normal">All of the pages and components are first designed in Figma and we keep a parity between the two versions even as we update the project.</p>
+            <time class="mb-1 text-sm font-normal leading-none">June 2023 - Present</time>
+            <h3 class="text-lg font-semibold ">Sales Team Member and Online Personal Shopper</h3>
+            <h3 class="text-[17px] font-normal italic">Woolworths Supermarket</h3>
+            <p class="mt-1 mb-4 text-sm font-light">
+                Collaborated effectively in a team setting, a crucial skill for software development projects <br>
+                Developed time management skills by efficiently processing multiple orders <br>
+            </p>
         </li>
         <li class="ms-4">
             <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
-            <time class="mb-1 text-sm font-normal leading-none">April 2022</time>
-            <h3 class="text-lg font-semibold ">E-Commerce UI code in Tailwind CSS</h3>
-            <p class="text-base font-normal">Get started with dozens of web components and interactive elements built on top of Tailwind CSS.</p>
+            <time class="mb-1 text-sm font-normal leading-none">January 2022 - January 2023</time>
+            <h3 class="text-lg font-semibold ">Sale Assistant</h3>
+            <p class="mt-1 mb-4 text-sm font-light">
+                Demonstrated strong communications with customers, explaining product’s design and details. <br>
+                Cultivated attention to details as it was needed for quality assurance
+            </p>
         </li>
     </ol>
 </div>
