--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import Social from '../components/Social.astro';
 	</head>
 	<body>
 		<Navigation />
-		<svg class="absolute inset-0 w-full h-full -z-1" version="1.1" xmlns="http://www.w3.org/2000/svg"
+		<svg class="fixed inset-0 w-full h-full -z-1" version="1.1" xmlns="http://www.w3.org/2000/svg"
 			 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100%" viewBox="0 0 1600 900" preserveAspectRatio="xMidYMax slice">
 			<defs>
 				<linearGradient id="bg">
@@ -67,13 +67,7 @@ import Social from '../components/Social.astro';
 		</svg>
 		<slot />
 	</body>
-	<!--<footer>-->
-	<!--	<Social platform="twitter" username="astrodotbuild" />-->
-	<!--	<Social platform="github" username="withastro" />-->
-	<!--	<Social platform="youtube" username="astrodotbuild" />-->
-	<!--</footer>-->
 </html>
-
 <style>
 	html,
 	body {
