projects page update

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,8 +1,10 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Carousel from "../components/Carousel.astro";
 ---
 <Layout>
 <ul>
     <li><a href="/projects/portfoliowebsite/">Post 1</a></li>
 </ul>
+    <Carousel />
 </Layout>
