--- a/src/components/Contacts.astro
+++ b/src/components/Contacts.astro
@@ -1,15 +1,17 @@
 ---
 ---
-<div class="container grid grid-cols-1 gap-10 px-6 py-12 mx-auto lg:grid-cols-3">
+<div class="container md:h-2/3 grid grid-cols-1 gap-10 px-6 py-12 mx-auto lg:grid-cols-3 md:items-center">
     <div class="flex flex-col items-start">
-        <h1 class="mt-2 text-3xl font-extrabold">Contact Me!</h1>
+        <h1 class="mt-1 text-3xl font-extrabold">Contact Me!</h1>
 
         <p class="mt-3 font-light">I will be absolutely grateful if you do 🥲</p>
     </div>
 
     <div class="grid grid-cols-1 gap-12 lg:col-span-2 sm:grid-cols-1">
-        <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Download CV</button>
-        <div class="content-center grid grid-cols-3 gap-12 justify-items-center">
+        <div class="flex flex-col items-center">
+            <button class="w-full md:w-3/4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Download CV</button>
+        </div>
+        <div class="content-center grid grid-cols-3 gap-5 md:gap-1 justify-items-center ">
             <a href="mailto:vandu7124@gmail.com">
                 <svg class="h-8 w-8 text-red-600"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z"/>
