--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -28,6 +28,17 @@
             <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
             <time class="mb-1 text-sm font-normal leading-none">January 2022 - January 2023</time>
             <h3 class="text-lg font-semibold ">Sale Assistant</h3>
+            <h3 class="text-[17px] font-normal italic">Lann Jewelry</h3>
+            <p class="mt-1 mb-4 text-sm font-light">
+                Demonstrated strong communications with customers, explaining product’s design and details. <br>
+                Cultivated attention to details as it was needed for quality assurance
+            </p>
+        </li>
+        <li class="ms-4">
+            <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
+            <time class="mb-1 text-sm font-normal leading-none">January 2022 - January 2023</time>
+            <h3 class="text-lg font-semibold ">Head of Marketing Department</h3>
+            <h3 class="text-[17px] font-normal italic">KIBV- Keep It Beautiful Vietnam</h3>
             <p class="mt-1 mb-4 text-sm font-light">
                 Demonstrated strong communications with customers, explaining product’s design and details. <br>
                 Cultivated attention to details as it was needed for quality assurance
