--- a/src/components/Contacts.astro
+++ b/src/components/Contacts.astro
@@ -8,26 +8,26 @@
     </div>
 
     <div class="grid grid-cols-1 gap-12 lg:col-span-2 sm:grid-cols-1">
-        <div class="flex flex-col items-center">
-            <button class="w-full md:w-3/4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Download CV</button>
-        </div>
+        <a href="/resume.pdf" download="du-van-nguyen-resume.pdf" class="flex flex-col items-center">
+            <button class="w-full md:w-3/4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition duration-250 ease-in-out">Download CV</button>
+        </a>
         <div class="content-center grid grid-cols-3 gap-5 md:gap-1 justify-items-center ">
             <a href="mailto:vandu7124@gmail.com">
-                <svg class="h-8 w-8 text-red-600"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <svg class="h-8 w-8 text-red-600 hover:text-white transition duration-250 ease-in-out"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z"/>
                     <rect x="3" y="5" width="18" height="14" rx="2" />
                     <polyline points="3 7 12 13 21 7" />
                 </svg>
             </a>
             <a href="https://www.linkedin.com/in/du-van-nguyen-4209912b5/">
-                <svg class="h-8 w-8 text-blue-500"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round">
+                <svg class="h-8 w-8 text-blue-500 hover:text-white transition duration-250 ease-in-out"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round">
                     <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z" />
                     <rect x="2" y="9" width="4" height="12" />
                     <circle cx="4" cy="4" r="2" />
                 </svg>
             </a>
             <a href="https://github.com/vzunguyen">
-                <svg class="h-8 w-8 text-zinc-400"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round">
+                <svg class="h-8 w-8 text-zinc-400 hover:text-white transition duration-250 ease-in-out"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round">
                     <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22" />
                 </svg>
             </a>
