--- a/src/components/Contacts.astro
+++ b/src/components/Contacts.astro
@@ -1,13 +1,13 @@
 ---
 ---
-<div class="container md:h-2/3 grid grid-cols-1 gap-10 px-6 py-12 mx-auto lg:grid-cols-3 md:items-center">
-    <div class="flex flex-col items-start">
+<div class="container md:h-2/3 grid grid-cols-1 gap-10 px-6 py-12 mx-auto lg:grid-cols-3 md:items-center md:gap-0">
+    <div class="flex flex-col items-start md:items-center lg:items-start">
         <h1 class="mt-1 text-3xl font-extrabold">Contact Me!</h1>
 
         <p class="mt-3 font-light">I will be absolutely grateful if you do 🥲</p>
     </div>
 
-    <div class="grid grid-cols-1 gap-12 lg:col-span-2 sm:grid-cols-1">
+    <div class="grid grid-cols-1 gap-12 sm:grid-cols-1 lg:col-span-2">
         <a href="/resume.pdf" download="du-van-nguyen-resume.pdf" class="flex flex-col items-center">
             <button class="w-full md:w-3/4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition duration-250 ease-in-out">Download CV</button>
         </a>
