--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -13,10 +13,10 @@ import React from 'react';
 			</div>
 			<span class="sm:text-sm md:text-xl pt-3 px-5 md:mr-30 md:ml-30 lg:mr-60 lg:ml-60">
 					I am currently a third year student at Swinburne University of
-                    Technology, studying <mark class="text-pink-400 bg-transparent">Computer Science</mark> with a major in <mark class="text-pink-400 bg-transparent">Software
-                    Development</mark>. Additionally, I'm also a <mark class="text-pink-400 bg-transparent"> game developer intern </mark> at Education Network
-                    Group. Given my <mark class="text-pink-400 bg-transparent">passion for problem-solving</mark>, I have made it my goal to become a software developer. Despite
-                    being new to the industry, I am always <mark class="text-pink-400 bg-transparent">eager to learn more and improve
+                    Technology, studying <mark class="highlightword text-[1rem] px-1 py-1/5 rounded">Computer Science</mark> with a major in <mark class="highlightword text-[1rem] px-1 py-1/5 rounded">Software
+                    Development</mark>. Additionally, I'm also a <mark class="highlightword text-[1rem] px-1 py-1/5 rounded"> game developer intern</mark> at Education Network
+                    Group. Given my <mark class="highlightword text-[1rem] px-1 py-1/5 rounded">passion for problem-solving</mark>, I have made it my goal to become a software developer. Despite
+                    being new to the industry, I am always <mark class="highlightword text-[1rem] px-1 py-1/5 rounded">eager to learn more and improve
                     my skills</mark> as I believe it is important to quickly adapt in this
                     forever changing world of technology.
 			</span>
@@ -26,7 +26,6 @@ import React from 'react';
 
 <style>
 	#container {
-		font-family: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans', Arial, sans-serif;
 		height: 80%;
 	}
 </style>
