--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -1,10 +1,10 @@
 ---
 import ProjectCard from "./ProjectCard.astro"
 ---
-<div id="indicators-carousel" class="relative w-full h-screen" data-carousel="static">
-    <!-- Carousel wrapper -->
-    <div class="relative h-full w-full overflow-y-auto text-black">
-        <div class="flex flex-col gap-4 snap-y snap-mandatory px-4 py-6 h-full w-full items-center scroll-smooth">
+<div class="relative h-full w-full md:overflow-y-auto">
+<!-- Carousel wrapper -->
+    <div class="text-black">
+        <div class="flex flex-col gap-4 px-4 py-6 h-full w-full items-center">
             <!-- Card 1 -->
             <div class="max-w-full md:w-2/3 rounded-xl bg-white opacity-90 shadow-lg p-6 snap-start">
                 <ProjectCard name="Portfolio Site"
@@ -52,4 +52,3 @@ import ProjectCard from "./ProjectCard.astro"
             </div>
         </div>
     </div>
-</div>
