--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -1,6 +1,6 @@
 ---
 ---
-<div id="toggleMenu" class="fixed top-15 left-6 z-50">
+<div id="toggleMenu" class="absolute top-15 left-6 z-50">
     <div id="hamburger" class="relative rounded-full transition-all duration-300
     before:content-[''] before:absolute before:w-8 before:h-1 before:bg-white
     before:rounded-full before:-translate-y-2 before:transition-all before:duration-300
