--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -1,9 +1,9 @@
 ---
 
 ---
-<div class="px-3">
+<div class="px-5 relative h-full w-full md:overflow-y-auto">
     <ol class="relative border-s border-gray-200">
-        <li class="mb-10 ms-4">
+        <li class="pt-3 pb-10 ms-4">
             <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
             <time class="mb-1 text-sm font-normal leading-none">Feb 2025 - Present</time>
             <h3 class="text-lg font-semibold ">Games Developer Internship</h3>
@@ -14,7 +14,7 @@
                 Collaborated with other developers through Jira, Confluence, and GitHub
             </p>
         </li>
-        <li class="mb-10 ms-4">
+        <li class="pb-10 ms-4">
             <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
             <time class="mb-1 text-sm font-normal leading-none">June 2023 - Present</time>
             <h3 class="text-lg font-semibold ">Sales Team Member and Online Personal Shopper</h3>
@@ -24,7 +24,17 @@
                 Developed time management skills by efficiently processing multiple orders <br>
             </p>
         </li>
-        <li class="ms-4">
+        <li class="pb-10 ms-4">
+            <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
+            <time class="mb-1 text-sm font-normal leading-none">Feb 2023 - Present</time>
+            <h3 class="text-lg font-semibold ">Studying Bachelor of Computer Science</h3>
+            <h3 class="text-[17px] font-normal italic">Swinburne University of Technology</h3>
+            <p class="mt-1 mb-4 text-sm font-light">
+                Collaborated effectively in a team setting, a crucial skill for software development projects <br>
+                Developed time management skills by efficiently processing multiple orders <br>
+            </p>
+        </li>
+        <li class="pb-10 ms-4">
             <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
             <time class="mb-1 text-sm font-normal leading-none">January 2022 - January 2023</time>
             <h3 class="text-lg font-semibold ">Sale Assistant</h3>
@@ -34,7 +44,7 @@
                 Cultivated attention to details as it was needed for quality assurance
             </p>
         </li>
-        <li class="ms-4">
+        <li class="pb-10 ms-4">
             <div class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white dark:border-gray-900 dark:bg-gray-700"></div>
             <time class="mb-1 text-sm font-normal leading-none">January 2022 - January 2023</time>
             <h3 class="text-lg font-semibold ">Head of Marketing Department</h3>
@@ -46,4 +56,3 @@
         </li>
     </ol>
 </div>
-
