--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,36 @@
 @import "tailwindcss";
 @plugin '@tailwindcss/typography';
 
+/* playfair-display-latin-wght-normal */
+/* roboto-mono-latin-wght-normal */
+@font-face {
+    font-family: 'Roboto Mono Variable';
+    font-style: normal;
+    font-display: auto;
+    font-weight: 100 700;
+    src: url(@fontsource-variable/roboto-mono/files/roboto-mono-latin-wght-normal.woff2) format('woff2-variations');
+    unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+}
+
+/* libre-franklin-latin-wght-normal */
+@font-face {
+    font-family: 'Libre Franklin Variable';
+    font-style: normal;
+    font-display: swap;
+    font-weight: 100 900;
+    src: url(@fontsource-variable/libre-franklin/files/libre-franklin-latin-wght-normal.woff2) format('woff2-variations');
+    unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+}
+
 body {
     @apply bg-black text-white;
+    font-family: 'Libre Franklin Variable', sans-serif;
+}
+
+.highlightword {
+    font-family: 'Roboto Mono Variable', monospace;
+    background-color: #44475A;
+    color: #FF79C6;
 }
 
 @layer components {
