add prj and skills

--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -16,7 +16,7 @@ import ProjectCard from "./ProjectCard.astro"
             </div>
             <!-- Card 2 -->
             <div class="max-w-full md:w-2/3 rounded-xl bg-white opacity-90 shadow-lg p-6 snap-start">
-                <ProjectCard name="Portfolio Site"
+                <ProjectCard name= "Weather App Project"
                              link="http://www.zuvn.dev"
                              skills="Javascript, React, Tailwind CSS, Vercel"
                              state="In Progress"
