fixing projects and skills pages

--- a/src/components/AllSkills.astro
+++ b/src/components/AllSkills.astro
@@ -3,12 +3,12 @@
 import SkillCard from './SkillCard.astro';
 
 const skillsData = [
-    { heading: 'Frontend Development', skills: ['HTML', 'CSS', 'React'] },
-    { heading: 'Backend Development', skills: ['.NET', 'SQL'] },
-    { heading: 'Game Development', skills: ['Unity', 'C#'] },
-    { heading: 'Tools', skills: ['Git', 'Docker', 'Postman', 'Confluence', 'Jira'] },
-    { heading: 'Languages', skills: ['English', 'Vietnamese'] },
+    { heading: 'Frontend Development', skills: ['Javascript','TailwindCSS','Astro','React', 'HTML', 'CSS', 'PHP'] },
+    { heading: 'Backend Development', skills: ['C#','Java','Python','SpringBoot','.NET', 'SQL'] },
+    { heading: 'Game Development', skills: ['Unity'] },
+    { heading: 'Tools', skills: ['Git', 'Postman', 'Confluence', 'Jira'] },
     { heading: 'Soft Skills', skills: ['Leadership', 'Teamwork', 'Communication', 'Problem-solving'] },
+    { heading: 'Languages', skills: ['English', 'Vietnamese'] },
 ];
 ---
 <div class="h-2/3 md:justify-center md:content-center">
