--- a/src/components/Timeline.astro
+++ b/src/components/Timeline.astro
@@ -30,8 +30,9 @@
             <h3 class="text-lg font-semibold ">Studying Bachelor of Computer Science</h3>
             <h3 class="text-[17px] font-normal italic">Swinburne University of Technology</h3>
             <p class="mt-1 mb-4 text-sm font-light">
-                Collaborated effectively in a team setting, a crucial skill for software development projects <br>
-                Developed time management skills by efficiently processing multiple orders <br>
+                Learning about software development, data structures, algorithms, and programming languages <br>
+                Participating in group projects to enhance teamwork and collaboration skills <br>
+                Engaging in hands-on coding exercises and practical assignments to apply theoretical concepts
             </p>
         </li>
         <li class="pb-10 ms-4">
@@ -50,8 +51,8 @@
             <h3 class="text-lg font-semibold ">Head of Marketing Department</h3>
             <h3 class="text-[17px] font-normal italic">KIBV- Keep It Beautiful Vietnam</h3>
             <p class="mt-1 mb-4 text-sm font-light">
-                Demonstrated strong communications with customers, explaining product’s design and details. <br>
-                Cultivated attention to details as it was needed for quality assurance
+                A non-profit organisation with the objectives of helping saving the environment in Vietnam <br>
+                Honed leadership skills by leading to develop marketing strategies and campaigns
             </p>
         </li>
     </ol>
