--- a/src/components/Contacts.astro
+++ b/src/components/Contacts.astro
@@ -8,9 +8,18 @@
     </div>
 
     <div class="grid grid-cols-1 gap-12 sm:grid-cols-1 lg:col-span-2">
-        <a href="/resume.pdf" download="du-van-nguyen-resume.pdf" class="flex flex-col items-center">
-            <button class="w-full md:w-3/4 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition duration-250 ease-in-out">Download CV</button>
-        </a>
+        <div class="flex flex-col items-center space-y-3">
+            <a href="/resume.pdf" download="du-van-nguyen-resume.pdf" class="w-full md:w-3/4">
+                <button class="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition duration-250 ease-in-out">
+                    Download CV
+                </button>
+            </a>
+            <a href="/transcript.pdf" download="du-van-nguyen-transcript.pdf" class="w-full md:w-3/4">
+                <button class="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition duration-250 ease-in-out">
+                    Download Academic Transcript
+                </button>
+            </a>
+        </div>
         <div class="content-center grid grid-cols-3 gap-5 md:gap-1 justify-items-center ">
             <a href="mailto:vandu7124@gmail.com">
                 <svg class="h-8 w-8 text-red-600 hover:text-white transition duration-250 ease-in-out"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
