update new design for projects and skills page, new font for navbar

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -40,5 +40,5 @@ import Hamburger from "./Hamburger.astro"
         </a>
     </div>
 </nav>
-<div class="md:hidden"><Hamburger /></div>
+<div class="nav md:hidden"><Hamburger /></div>
 
