--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -6,49 +6,44 @@ import ProjectCard from "./ProjectCard.astro"
     <div class="text-black">
         <div class="flex flex-col gap-4 px-4 py-6 h-full w-full items-center">
             <!-- Card 1 -->
-            <div class="max-w-full md:w-2/3 rounded-xl bg-white opacity-90 shadow-lg p-6 snap-start">
-                <ProjectCard name="Portfolio Site"
+                <ProjectCard emoji="🌐"
+                             name="Portfolio Site"
                              link="https://github.com/vzunguyen/portfolio-site"
                              skills="Javascript, React, Astro, Tailwind CSS, Vercel"
                              state="In Progress"
                              description="In order to put myself out there in the industry, I have created this portfolio website to showcase my skills and projects. This website is made with Astro, React and TailwindCSS.">
                 </ProjectCard>
-            </div>
             <!-- Card 2 -->
-            <div class="max-w-full md:w-2/3 rounded-xl bg-white opacity-90 shadow-lg p-6 snap-start">
-                <ProjectCard name= "Weather App Project"
+                <ProjectCard emoji="⛅"
+                             name= "Weather App Project"
                              link="https://github.com/vzunguyen/weather-project"
                              skills="Python, React, Javascript, Jira"
                              state="Completed"
                              description="This project involves building a model to help predict weather conditions and energy efficiency using current weather API and NYC historical data.">
                 </ProjectCard>
-            </div>
             <!-- Card 3 -->
-            <div class="max-w-full md:w-2/3 rounded-xl bg-white opacity-90 shadow-lg p-6 snap-start">
-                <ProjectCard name="LLMs Project"
+                <ProjectCard emoji="🤖"
+                             name="LLMs Project"
                              link="https://github.com/vzunguyen/llms-project"
                              skills="Python, PyTorch, LitGPT"
                              state="Suspended"
                              description="This project involves building a large language model from scratch, with core components developed independently.">
                 </ProjectCard>
-            </div>
             <!-- Card 4 -->
-            <div class="max-w-full md:w-2/3 rounded-xl bg-white opacity-90 shadow-lg p-6 snap-start">
-                <ProjectCard name="My First Portfolio Website"
+                <ProjectCard emoji="🌟"
+                             name="My First Portfolio Website"
                              link="https://github.com/vzunguyen/portfolio-website"
                              skills="Javascript, React, Tailwind CSS, Vercel"
                              state="Completed"
                              description="This is my first ever Portfolio Website, made with React and Tailwind CSS, and used JSON data to display my information. This website is deployed on Vercel.">
                 </ProjectCard>
-            </div>
             <!-- Card 5 -->
-            <div class="max-w-full md:w-2/3 rounded-xl bg-white opacity-90 shadow-lg p-6 snap-start">
-                <ProjectCard name="Book Review API"
+                <ProjectCard emoji="📚"
+                             name="Book Review API"
                              link="https://github.com/vzunguyen/book-review"
                              skills="Javascript, React, Tailwind CSS, Vercel"
                              state="In Progress"
                              description="This project was developed in preparation for job hunting and learning Java and Springboot, technologies that are widely used in the industry.">
                 </ProjectCard>
-            </div>
         </div>
     </div>
