--- a/src/components/Contacts.astro
+++ b/src/components/Contacts.astro
@@ -10,12 +10,12 @@
     <div class="grid grid-cols-1 gap-12 sm:grid-cols-1 lg:col-span-2">
         <div class="flex flex-col items-center space-y-3">
             <a href="/resume.pdf" download="du-van-nguyen-resume.pdf" class="w-full md:w-3/4">
-                <button class="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition duration-250 ease-in-out">
+                <button class="w-full bg-pink-400 hover:bg-pink-600 text-white font-bold py-2 px-4 rounded transition duration-250 ease-in-out">
                     Download CV
                 </button>
             </a>
             <a href="/transcript.pdf" download="du-van-nguyen-transcript.pdf" class="w-full md:w-3/4">
-                <button class="w-full bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition duration-250 ease-in-out">
+                <button class="w-full bg-pink-400 hover:bg-pink-600 text-white font-bold py-2 px-4 rounded transition duration-250 ease-in-out">
                     Download Academic Transcript
                 </button>
             </a>
