--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,9 +22,31 @@
     unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 
+/* bebas-neue-latin-400-normal */
+@font-face {
+    font-family: 'Bebas Neue';
+    font-style: normal;
+    font-display: block;
+    font-weight: 300;
+    src: url(@fontsource/bebas-neue/files/bebas-neue-latin-400-normal.woff2) format('woff2'), url(@fontsource/bebas-neue/files/bebas-neue-latin-400-normal.woff) format('woff');
+    unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+}
+
 body {
     @apply bg-black text-white;
     font-family: 'Libre Franklin Variable', sans-serif;
+}
+
+nav, .nav {
+    font-family: 'Bebas Neue', cursive;
+    font-weight: 100;
+    font-size: 1rem;
+    letter-spacing: 0.05em;
+}
+
+button {
+    font-family: 'Bebas Neue', sans-serif;
+    letter-spacing: 0.1em;
 }
 
 .highlightword {
