fixing colour for the cards

--- a/src/components/SkillCard.astro
+++ b/src/components/SkillCard.astro
@@ -2,7 +2,7 @@
 const { heading, skills } = Astro.props;
 const skillList = Array.isArray(skills) ? skills : [];
 ---
-<div class="group relative flex flex-col my-6 rounded-lg w-9/10 backdrop-blur-xl bg-white hover:bg-pink-500 transition-all duration-300 ease-in-out hover:scale-103 shadow-lg">
+<div class="group relative flex flex-col my-6 rounded-lg w-9/10 backdrop-blur-xl bg-white/90 hover:bg-pink-500 transition-all duration-300 ease-in-out hover:scale-103 shadow-lg">
     <div class="p-4 min-h-50 rounded-lg border-white/30 divide-y text-black transition-colors duration-300 ease-in-out group-hover:text-white">
         <h1 class="font-medium text-xl md:text-2xl px-1 pb-1.5 transition-colors duration-300 ease-in-out group-hover:text-white">
             {heading}
