--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,7 +1,7 @@
  ---
 const {emoji, name, link, skills, state, description} = Astro.props;
  ---
- <div class="group max-w-full md:w-2/3 rounded-xl bg-white shadow-lg p-6 snap-start transition-all duration-300 ease-in-out hover:bg-pink-500 hover:scale-103">
+ <div class="group max-w-full md:w-2/3 rounded-xl bg-white/90 shadow-lg p-6 snap-start transition-all duration-300 ease-in-out hover:bg-pink-500 hover:scale-103">
      <a href={link}>
          <h1 class="text-3xl font-bold text-black transition-colors duration-300 ease-in-out group-hover:text-white">
              <span class="text-2xl">{emoji}</span> {name}
