--- a/src/components/AllSkills.astro
+++ b/src/components/AllSkills.astro
@@ -6,7 +6,7 @@ const skillsData = [
     { heading: 'Frontend Development', skills: ['Javascript','TailwindCSS','Astro','React', 'HTML', 'CSS', 'PHP'] },
     { heading: 'Backend Development', skills: ['C#','Java','Python','SpringBoot','.NET', 'SQL'] },
     { heading: 'Game Development', skills: ['Unity'] },
-    { heading: 'Tools', skills: ['Git', 'Postman', 'Confluence', 'Jira'] },
+    { heading: 'Tools', skills: ['Git','Docker', 'Postman', 'Confluence', 'Jira'] },
     { heading: 'Soft Skills', skills: ['Leadership', 'Teamwork', 'Communication', 'Problem-solving'] },
     { heading: 'Languages', skills: ['English', 'Vietnamese'] },
 ];
