--- a/src/components/Carousel.astro
+++ b/src/components/Carousel.astro
@@ -11,7 +11,7 @@ import ProjectCard from "./ProjectCard.astro"
                              link="https://github.com/vzunguyen/portfolio-site"
                              skills="Javascript, React, Astro, Tailwind CSS, Vercel"
                              state="In Progress"
-                             description="A personal website built with Astro, React, and TailwindCSS to showcase my skills and projects, designed to be fast, responsive, and easily updated. Javascript, React, Astro, Tailwind CSS, Vercel.">
+                             description="In order to put myself out there in the industry, I have created this portfolio website to showcase my skills and projects. This website is made with Astro, React and TailwindCSS.">
                 </ProjectCard>
             <!-- Card 2 -->
                 <ProjectCard emoji="⛅"
