Update Otome Tracker project

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Carousel from "../components/Carousel.astro";
+import ProjectCarousel from "../components/ProjectCarousel.astro";
 ---
 <Layout>
-    <Carousel />
+    <ProjectCarousel />
 </Layout>
