--- a/src/components/ProjectCarousel.astro
+++ b/src/components/ProjectCarousel.astro
@@ -2,10 +2,17 @@
 import ProjectCard from "./ProjectCard.astro"
 ---
 <div class="relative h-full w-full md:overflow-y-auto">
-<!-- Carousel wrapper -->
+<!-- ProjectCarousel wrapper -->
     <div class="text-black">
         <div class="flex flex-col gap-4 px-4 py-6 h-full w-full items-center">
             <!-- Card 1 -->
+            <ProjectCard emoji="🌐"
+                         name="Otome Tracker"
+                         link="#"
+                         skills="Typescript, Tailwind CSS, React, Kotlin, Docker, Postgres, Flyway"
+                         state="In Progress"
+                         description="To be updated.">
+            </ProjectCard>
                 <ProjectCard emoji="🌐"
                              name="Portfolio Site"
                              link="https://github.com/vzunguyen/portfolio-site"
